--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                             <li>Locations</li>
                             <li>Gallery</li>
                             <li>Reviews</li>
+                            <li>Contact</li>
                         </ul>
                     </nav>
                 </div>
